# iGac

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  build.sh  readme.md  test.sh  testFC.sh  testFC_Update.sh
Common/: Tango.xcs  vlpp.natvis
Common/Draft/: Draft.txt  Koncept.txt  k_DPL.txt  k_Native.txt  k_VM.txt
Common/Linux/: Main.cpp  coverage.sh  makefile  makefile.debug-clang.makegen  makefile.debug.makegen  vczh_config
Common/Source/: Basic.cpp  Basic.h  Common.fpm  Console.cpp  Console.h  Event.h  Event.h.fpm  Exception.cpp  Exception.h  Function.h  Function.h.fpm  GenerateCode.bat  GlobalStorage.cpp  GlobalStorage.h  HttpUtility.cpp  HttpUtility.h  Lazy.h  Locale.cpp  Locale.h  Pointer.h  String.cpp  String.h  Threading.cpp  Threading.h  ThreadingLinux.cpp  Tuple.h  Tuple.h.fpm
Common/Tools/: Arguments.txt  BuildTools.bat  BuildToolsLinux.sh
Common/UnitTest/: UnitTest.sln
GacRelease/: GacUI.cpp  Vlpp.h
Libraries/GacUI/: BugList.txt
Mac/Theme/: MacSkin.cpp  MacSkin.h
MacFullControlTest/: CMakeLists.txt  Info.plist.in  Main.mm
MacShared/: CMakeLists.txt  UnixFileSystemInfo.cpp  UnixFileSystemInfo.h  gac_include.h  osx_shared.mm
MacTest/: CMakeLists.txt  CopyResources.py  Info.plist  Info.plist.in  MacOSXBundleInfo.plist.in  UnixFileSystemInfo.cpp  UnixFileSystemInfo.h  button_check_and_radio.h  button_enable_disable.h  datagrid_chemical_elements.cpp  datagrid_chemical_elements.h  datagrid_chemical_elements_cg_renderer.h  datagrid_chemical_elements_cg_renderer.mm  datagrid_date_picker.h  datagrid_file_browser.h  datagrid_table_editor.h  gac_include.h  label_basic.h  label_hyperlink.h  listbox_name_editor.h  listbox_name_selector.h  listbox_virtual_mode.h  listview_sorting_and_filtering.h  listview_viewswitching.h  listview_virtual_mode.h  main.cpp  main.mm  osx_shared.h  osx_shared.mm  scroll_colorpicker.h  tab_textbox_page.h  template_customized_border.h  textbox_colorizer.h  textbox_editor.h  treeview_file_explorer.h
MacTest/ControlTemplateWindow/: Info.plist  main.cpp
MacTest/Controls/AddressBook/: Main.cpp
MacTest/Controls/Animation/: Main.cpp
MacTest/Controls/CalculatorAndStateMachine/: Main.cpp
MacTest/Controls/ColorPicker/: Main.cpp
MacTest/Controls/ContainersAndButtons/: Main.cpp
MacTest/Controls/DataGrid/: Main.cpp
MacTest/GacOSX.xcodeproj/: project.pbxproj
MacTest/GacOSX.xcodeproj/project.xcworkspace/xcshareddata/: GacOSX.xccheckout
MacTest/GacOSX.xcodeproj/project.xcworkspace/xcuserdata/darkfall.xcuserdatad/: UserInterfaceState.xcuserstate
MacTest/GacOSX.xcodeproj/xcuserdata/darkfall.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MacTest/GacOSX.xcodeproj/xcuserdata/darkfall.xcuserdatad/xcschemes/: GacOSX.xcscheme  GacOSX_Label_HyperLink.xcscheme  xcschememanagement.plist
MacTest/HelloWorlds/Cpp/: Main.cpp
MacTest/ID3ConvertGUI/: ID3Window.h  ID3Window.mm  Info.plist  main.cpp
MacTest/ID3ConvertGUI/ID3Convert/: ID3Convert.h  ID3Convert.mm  main.mm  readme.md
MacTest/Layouts/Alignment/: Main.cpp
MacTest/Layouts/Flow/: Main.cpp
MacTest/Layouts/RichTextEmbedding/: DemoPartialClasses.cpp  DemoPartialClasses.h  Main.cpp
MacTest/Layouts/Stack/: Main.cpp
MacTest/Layouts/Table/: DemoPartialClasses.cpp  DemoPartialClasses.h  DemoReflection.cpp  DemoReflection.h  Main.cpp
MacTest/Resources/: XmlDocDemo.xml  XmlWindowResourceControlTemplate.precompiled.compressed
MacTest/controls/: button_check_and_radio.cpp  button_check_and_radio.h  button_enable_disable.cpp  button_enable_disable.h  datagrid_chemical_elements.cpp  datagrid_chemical_elements.h  datagrid_chemical_elements_cg_renderer.h  datagrid_chemical_elements_cg_renderer.mm  datagrid_date_picker.cpp  datagrid_date_picker.h  datagrid_file_browser.cpp  datagrid_file_browser.h  datagrid_table_editor.cpp  datagrid_table_editor.h  label_basic.cpp  label_basic.h  label_hyperlink.cpp  label_hyperlink.h  listbox_name_editor.cpp  listbox_name_editor.h  listbox_name_selector.cpp  listbox_name_selector.h  listbox_virtual_mode.cpp  listbox_virtual_mode.h  listview_sorting_and_filtering.cpp  listview_sorting_and_filtering.h  listview_viewswitching.cpp  listview_viewswitching.h  listview_virtual_mode.cpp  listview_virtual_mode.h  scroll_colorpicker.cpp  scroll_colorpicker.h  tab_textbox_page.cpp  template_customized_border.cpp  textbox_colorizer.cpp  textbox_colorizer.h  textbox_editor.cpp  tooltip_richtext.cpp  treeview_file_explorer.cpp
MacTest/editor/: document_editor.cpp  document_editor.h  document_editor_initialization.cpp
MacTest/persistant/: directcode_scripting.cpp  directcode_scripting.h  directcode_simplewindow.cpp  directcode_simplewindow.h  xml_control_template.cpp  xml_control_template.h  xml_data_binding.cpp  xml_data_binding.h
MacTest/persistant/control_template/: CheckBoxTemplate.h  CheckTextListTemplate.cpp  CheckTextListTemplate.h  DocumentLabelTemplate.h  GroupBoxTemplate.h  HScrollTemplate.h  HelloWorldPartialClasses.h  LeftScrollButtonTemplate.cpp  ListViewTemplate.h  MainWindow.cpp  MenuBarButtonTemplate.cpp  MenuItemButtonTemplate.cpp  MenuSplitterTemplate.h  RadioTextListTemplate.cpp  ScrollViewTemplate.cpp  SinglelineTextBoxTemplate.cpp  TabDropdownTemplate.h  TabTemplate.h  ToolstripButtonTemplate.cpp  ToolstripMenuTemplate.h  ToolstripSplitArrowTemplate.cpp  ToolstripSplitterTemplate.cpp  ToolstripSplitterTemplate.h  VScrollTemplate.cpp
MacTest/persistant/data_binding/: DemoPartialClasses.h  MainWindow.h
MacTest/rendering/: rendering_rawapi.h  rendering_rawapi.mm  rendering_rawapi_window.cpp
MacTest/shared/: gac_include.h  osx_shared.h  osx_shared.mm
Public/Source/: GacUI.cpp  GacUI.h  GacUIReflection.cpp  GacUIReflection.h  Vlpp.cpp  Vlpp.h  VlppWorkflow.cpp
doc/: OSProvider.md  OSProvider_Graphics.md  OSProvider_HostedMode.md  OSProvider_Window.md  Plan_HostedMode.md  lldb.md
iOSTest/: Info.plist  gac_include.h  main.cpp  osx_shared.h  osx_shared.mm
iOSTest/controls/: datagrid_date_picker.h  tab_textbox_page.h  template_customized_border.h  textbox_colorizer.h  textbox_editor.h  tooltip_richtext.h  (+1 more)
(+1292 files in other folders)
